design.css
@import url('https://fonts.googleapis.com/css2?family=Averia+Libre:wght@300&display=swap');
body{
    /*background-color: rgba(209, 234, 231, 1);*/
    /*background-color: rgb(131, 171, 187);*/
    /*background-color: rgb(233, 219, 219);*/
    text-indent: 20px;
    font-size: medium;
    font-weight: bolder;
    font-family: 'averia libre';
    background-color: whitesmoke;
}
.header{
    position: sticky;
    font-family: 'averia libre';
    text-align: center;
}

.round {
    border-radius: 50%;
}

.info{
    font-size: large;
    font-family: 'averia libre';
    
}
/*
.header-left{
    float: left;
}
.header-right{
    float: right;
    padding: 5px 35px;
    display: block;
}
*/
a:link{
    text-decoration: none;
}
a:visited{
    color: #000;
    text-decoration: none;
}
a:hover {
    color: rgb(106, 157, 216)
    /*text-decoration: underline;*/
}  
.flex-container{
    font-family: 'averia libre';
    display: flex;
    flex-wrap: wrap;
    justify-content:center;
}
@media screen and (max-width: 600px) {
    .column.left, .column.right {
      width: 100%;
      padding: 100;
    }
}
.row::after{
    content: "";
    display: table;
    clear: both;
}
.footer {
    font-family: 'averia libre';
    color: rgb(30, 31, 46);
    text-align: center;
    padding: 10px;
}

